--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,9 +62,13 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-assests:
-  - Assets/Images/pexels-brett-jordan-2308939.jpg
-  # An image asset can refer to one or more resolution-specific "variants", see
+
+  assets:
+    - Assets/Images/pexels-brett-jordan-2308939.jpg
+    - Assets/Images/pexels-kenneth-2912108.jpg
+
+
+    # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
   # For details regarding adding assets from package dependencies, see
